<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="1dp"
    android:background="#FE9F9F"
    tools:context=".RecipientRegistrationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#653535"
        android:elevation="10dp"
        >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:background="#FE9F9F"
        android:orientation="vertical"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="00dp"
        android:fontFamily="@font/arapeyitalic"
        android:gravity="center"
        android:text="Recipient Registration"
        android:textColor="#800020"
        android:textSize="27sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        android:layout_gravity="center"
        app:civ_border_color="#FF000000"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="#000"
        app:hintTextAppearance="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_person"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="#000"
        app:hintTextAppearance="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerIdNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_id_number"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_number"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="#000"
        app:hintTextAppearance="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:textColor="#000"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_phone"

            />
    </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/bloodGroupsSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#FE9F9F"
            android:entries="@array/bloodgroups"
            android:gravity="center"
            tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="#000"
        app:hintTextAppearance="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_mail"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextInputLayoutStyle"
        app:boxStrokeColor="#000"
        app:hintTextAppearance="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:drawablePadding="10dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:textColorHint="#000"
            android:drawableStart="@drawable/ic_password"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arapeyitalic"
        android:layout_gravity="top"
        android:layout_marginTop="0dp"
        android:background="@drawable/buttons_background"
        android:text="@string/sign_up_now"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        style="?android:attr/buttonBarButtonStyle"
        />
    <TextView
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_here_sign_in"
        android:layout_marginTop="30dp"
        android:textColor="#800020"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginStart="73sp"
        android:fontFamily="@font/arapeyitalic"
        />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
